<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">33rd Degree</string>
    <string name="app_name_devox">Devoxx App</string>
    <string name="feedback_link">mailto:apps@scalac.io?subject=Feedback: %1$s %2$s (%3$s) Android %4$s (API %5$s) %6$s %7$s</string>
    <string name="add_to_my_schedule">Add to\nMy Schedule</string>
    <string name="remove_to_my_schedule">Remove from\nMy Schedule</string>
    <string name="toast_feedback_activity_not_found">Email app not found</string>
    <string name="toast_notification_set_at">Notification set at</string>
    <string name="toast_notification_not_set">Can\'t set notification for a past or current event</string>
    <string name="action_by_scalac">by Scalac</string>
    <string name="action_settings">Settings</string>
    <string name="and">and</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_talks_list">Talk(s):</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="menu_schedule_label">Schedule</string>
    <string name="menu_talks_label">Talks</string>
    <string name="menu_tracks_label">Tracks</string>
    <string name="menu_speakers_label">Speakers</string>
    <string name="menu_map_label">Map</string>

    <string name="drawer_menu_other_feedback_label">FEEDBACK</string>
    <string name="drawer_menu_other_register_label">REGISTER</string>
    <string name="vote_not_legged_message">Musisz być zalogowany aby głosować!</string>
    <string name="drive_map">DRIVE MAP</string>
    <string name="conf_map">CONF MAP</string>
    <string name="go">GO</string>
    <string name="connection_error">Connection error!</string>
    <string name="default_break_label">Break…</string>
    <string name="search_hint">Search…</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>

    <plurals name="item_talk_more_talk">
        <item quantity="one">%d TALK</item>
        <item quantity="other">%d TALKS</item>
    </plurals>

    <plurals name="item_talk_more_track">
        <item quantity="one">in %d track</item>
        <item quantity="other">in %d tracks</item>
    </plurals>

    <string name="days">Days</string>
    <string name="tracks">Tracks</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="default_filters">Default</string>
    <string name="talk_details_section_format">Format</string>
    <string name="talk_details_section_room">Room</string>
    <string name="talk_details_section_presentor">Presentor</string>
    <string name="talk_details_section_presentors">Presentors</string>
    <string name="talk_details_section_date_time">Date and time</string>
    <string name="talks">Talks</string>
    <string name="about">About</string>
    <string name="venue">VENUE</string>
    <string name="settings">Settings</string>
    <string name="settings_change_conf_key">pref_key_change_conference</string>
    <string name="map_permissions_failure">Can\'t setup map, give us permission for that.</string>
    <string name="no_talk_foud">Can\'t find talk…</string>
    <string name="purchase_ticket">Purchase ticket</string>
    <string name="selector_days">DAYS</string>
    <string name="selector_talks">TALKS</string>
    <string name="selector_capacity">CAPACITY</string>
    <string name="selector_conf_info_format" formatted="false">From %d to %s\n%s</string>
    <string name="credits">Credits</string>
    <string name="report_issue">Report Issue</string>

    <string-array name="drawer_menu_schedule_time_label">
        <item>Schedule by event time</item>
        <item>Schedule by rooms</item>
        <item>Talks</item>
        <item>Speakers</item>
        <item>My schedule</item>
        <item>Feedback</item>
    </string-array>
</resources>