<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_white_24px"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu/>
    </item>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_purchase_ticket"
        android:title="@string/purchase_ticket"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_report_issue"
        android:title="@string/report_issue"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>